# halcyon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  halcyon.cabal  justfile  module-deps.dot
app/: Main.hs
lib/: Assembly.hs  Ast.hs  Cli.hs  Codegen.hs  Emit.hs  Halcyon.hs  Lexer.hs  Parse.hs  Pipeline.hs  Settings.hs  Tokens.hs  Utilities.hs
lib/Halcyon/: Backend.hs  Core.hs  Driver.hs  Frontend.hs
lib/Halcyon/Backend/: Codegen.hs  Emit.hs  ReplacePseudos.hs
lib/Halcyon/Core/: Assembly.hs  Ast.hs  Monad.hs  Settings.hs  Tacky.hs  TackyGen.hs
lib/Halcyon/Driver/: Cli.hs  External.hs  Output.hs  Pipeline.hs  Stages.hs
lib/Halcyon/Frontend/: Lexer.hs  Parse.hs  Tokens.hs
test/: Main.hs
test/Test/: Assembly.hs  Common.hs  Lexer.hs  Parser.hs  Pipeline.hs  Tacky.hs
