cabal-version:      3.0
name:               halcyon
version:            0.2.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             0xpantera
maintainer:         0xpantera@proton.me
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
          Halcyon
        , Halcyon.Core.Settings
        , Halcyon.Core.Ast
        , Halcyon.Core.Assembly
        , Halcyon.Core.Monad
        , Halcyon.Core.Tacky 
        , Halcyon.Core.TackyGen
        , Halcyon.Frontend.Lexer
        , Halcyon.Frontend.Parse
        , Halcyon.Frontend.Tokens
        , Halcyon.Backend.Codegen
        , Halcyon.Backend.Emit
        , Halcyon.Backend.ReplacePseudos
        , Halcyon.Driver.Cli
        , Halcyon.Driver.Pipeline
    other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
        , bytestring
        , containers
        , directory
        , filepath
        , megaparsec
        , mtl
        , optparse-applicative
        , parser-combinators
        , text
        , transformers
        , typed-process
    hs-source-dirs:   lib
    default-language: GHC2024

executable halcyon
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
          base ^>=4.20.0.0
        , halcyon
    hs-source-dirs:   app
    default-language: GHC2024

test-suite halcyon-test
    import:           warnings
    default-language: GHC2024
    other-modules:
          Test.Lexer
        , Test.Parser
        , Test.Tacky
        , Test.Assembly
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.20.0.0
        , halcyon
        , tasty ^>=1.4
        , tasty-hspec ^>=1.2
        , tasty-hedgehog ^>=1.4
        , tasty-golden ^>=2.3
        , hedgehog ^>=1.4
        , hspec ^>=2.11
        , text
        , megaparsec
        , directory
        , filepath
